generated/EVALParser.py
# Generated from EVALParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EVALParser ( Parser ):

    grammarFileName = "EVALParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'string'", "'bool'", 
                     "'const'", "'if'", "'else'", "'while'", "'try'", "'catch'", 
                     "'true'", "'false'", "'print'", "'cast'", "'pow'", 
                     "'sqrt'", "'min'", "'max'", "'round'", "'abs'", "'PI'", 
                     "'DAYS_IN_WEEK'", "'HOURS_IN_DAY'", "'YEAR'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", 
                     "'/='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "'{'", "'}'", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "STRING_TYPE", "BOOL", 
                      "CONST", "IF", "ELSE", "WHILE", "TRY", "CATCH", "TRUE", 
                      "FALSE", "PRINT", "CAST", "POW", "SQRT", "MIN", "MAX", 
                      "ROUND", "ABS", "PI", "DAYS_IN_WEEK", "HOURS_IN_DAY", 
                      "YEAR", "PLUS", "MINUS", "MULTI", "DIVIDE", "MODULUS", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTI_ASSIGN", "DIV_ASSIGN", 
                      "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "ASSIGN", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "COMMA", "REAL", "INTEGER", 
                      "STRING", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDeclaration = 3
    RULE_constDeclaration = 4
    RULE_assignment = 5
    RULE_assignOp = 6
    RULE_type = 7
    RULE_expression = 8
    RULE_builtinFunc = 9
    RULE_castCall = 10
    RULE_powCall = 11
    RULE_sqrtCall = 12
    RULE_minCall = 13
    RULE_maxCall = 14
    RULE_roundCall = 15
    RULE_absCall = 16
    RULE_macroValue = 17
    RULE_printStatement = 18
    RULE_printArg = 19
    RULE_ifStatement = 20
    RULE_whileStatement = 21
    RULE_tryStatement = 22

    ruleNames =  [ "program", "statement", "block", "variableDeclaration", 
                   "constDeclaration", "assignment", "assignOp", "type", 
                   "expression", "builtinFunc", "castCall", "powCall", "sqrtCall", 
                   "minCall", "maxCall", "roundCall", "absCall", "macroValue", 
                   "printStatement", "printArg", "ifStatement", "whileStatement", 
                   "tryStatement" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    STRING_TYPE=3
    BOOL=4
    CONST=5
    IF=6
    ELSE=7
    WHILE=8
    TRY=9
    CATCH=10
    TRUE=11
    FALSE=12
    PRINT=13
    CAST=14
    POW=15
    SQRT=16
    MIN=17
    MAX=18
    ROUND=19
    ABS=20
    PI=21
    DAYS_IN_WEEK=22
    HOURS_IN_DAY=23
    YEAR=24
    PLUS=25
    MINUS=26
    MULTI=27
    DIVIDE=28
    MODULUS=29
    PLUS_ASSIGN=30
    MINUS_ASSIGN=31
    MULTI_ASSIGN=32
    DIV_ASSIGN=33
    EQ=34
    NEQ=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    ASSIGN=40
    LBRACE=41
    RBRACE=42
    LPAREN=43
    RPAREN=44
    COMMA=45
    REAL=46
    INTEGER=47
    STRING=48
    IDENTIFIER=49
    WS=50
    LINE_COMMENT=51
    BLOCK_COMMENT=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EVALParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EVALParser.StatementContext)
            else:
                return self.getTypedRuleContext(EVALParser.StatementContext,i)


        def getRuleIndex(self):
            return EVALParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EVALParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 565148978766718) != 0):
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(EVALParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(EVALParser.VariableDeclarationContext,0)


        def constDeclaration(self):
            return self.getTypedRuleContext(EVALParser.ConstDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(EVALParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(EVALParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(EVALParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(EVALParser.WhileStatementContext,0)


        def tryStatement(self):
            return self.getTypedRuleContext(EVALParser.TryStatementContext,0)


        def builtinFunc(self):
            return self.getTypedRuleContext(EVALParser.BuiltinFuncContext,0)


        def block(self):
            return self.getTypedRuleContext(EVALParser.BlockContext,0)


        def getRuleIndex(self):
            return EVALParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = EVALParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.variableDeclaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.constDeclaration()
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.assignment()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.printStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.ifStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.whileStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.tryStatement()
                pass
            elif token in [14, 15, 16, 17, 18, 19, 20]:
                self.enterOuterAlt(localctx, 8)
                self.state = 61
                self.builtinFunc()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 9)
                self.state = 62
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(EVALParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(EVALParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EVALParser.StatementContext)
            else:
                return self.getTypedRuleContext(EVALParser.StatementContext,i)


        def getRuleIndex(self):
            return EVALParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = EVALParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(EVALParser.LBRACE)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 565148978766718) != 0):
                self.state = 66
                self.statement()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(EVALParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(EVALParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(EVALParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(EVALParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(EVALParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EVALParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = EVALParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.type_()
            self.state = 75
            self.match(EVALParser.IDENTIFIER)
            self.state = 76
            self.match(EVALParser.ASSIGN)
            self.state = 77
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(EVALParser.CONST, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(EVALParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return EVALParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaration" ):
                return visitor.visitConstDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaration(self):

        localctx = EVALParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(EVALParser.CONST)
            self.state = 80
            self.variableDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(EVALParser.IDENTIFIER, 0)

        def assignOp(self):
            return self.getTypedRuleContext(EVALParser.AssignOpContext,0)


        def expression(self):
            return self.getTypedRuleContext(EVALParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EVALParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = EVALParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(EVALParser.IDENTIFIER)
            self.state = 83
            self.assignOp()
            self.state = 84
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(EVALParser.ASSIGN, 0)

        def PLUS_ASSIGN(self):
            return self.getToken(EVALParser.PLUS_ASSIGN, 0)

        def MINUS_ASSIGN(self):
            return self.getToken(EVALParser.MINUS_ASSIGN, 0)

        def MULTI_ASSIGN(self):
            return self.getToken(EVALParser.MULTI_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(EVALParser.DIV_ASSIGN, 0)

        def getRuleIndex(self):
            return EVALParser.RULE_assignOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignOp" ):
                listener.enterAssignOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignOp" ):
                listener.exitAssignOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignOp" ):
                return visitor.visitAssignOp(self)
            else:
                return visitor.visitChildren(self)




    def assignOp(self):

        localctx = EVALParser.AssignOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1115617755136) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(EVALParser.INT, 0)

        def FLOAT(self):
            return self.getToken(EVALParser.FLOAT, 0)

        def STRING_TYPE(self):
            return self.getToken(EVALParser.STRING_TYPE, 0)

        def BOOL(self):
            return self.getToken(EVALParser.BOOL, 0)

        def getRuleIndex(self):
            return EVALParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = EVALParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EVALParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BuiltinExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def builtinFunc(self):
            return self.getTypedRuleContext(EVALParser.BuiltinFuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuiltinExpr" ):
                listener.enterBuiltinExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuiltinExpr" ):
                listener.exitBuiltinExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuiltinExpr" ):
                return visitor.visitBuiltinExpr(self)
            else:
                return visitor.visitChildren(self)


    class MacroExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def macroValue(self):
            return self.getTypedRuleContext(EVALParser.MacroValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroExpr" ):
                listener.enterMacroExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroExpr" ):
                listener.exitMacroExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroExpr" ):
                return visitor.visitMacroExpr(self)
            else:
                return visitor.visitChildren(self)


    class RealLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL(self):
            return self.getToken(EVALParser.REAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRealLiteral" ):
                listener.enterRealLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRealLiteral" ):
                listener.exitRealLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRealLiteral" ):
                return visitor.visitRealLiteral(self)
            else:
                return visitor.visitChildren(self)


    class IntLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(EVALParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntLiteral" ):
                listener.enterIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntLiteral" ):
                listener.exitIntLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntLiteral" ):
                return visitor.visitIntLiteral(self)
            else:
                return visitor.visitChildren(self)


    class TrueLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(EVALParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrueLiteral" ):
                listener.enterTrueLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrueLiteral" ):
                listener.exitTrueLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueLiteral" ):
                return visitor.visitTrueLiteral(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EVALParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EVALParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(EVALParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(EVALParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpr" ):
                listener.enterAdditiveExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpr" ):
                listener.exitAdditiveExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpr" ):
                return visitor.visitAdditiveExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EVALParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EVALParser.ExpressionContext,i)

        def LT(self):
            return self.getToken(EVALParser.LT, 0)
        def GT(self):
            return self.getToken(EVALParser.GT, 0)
        def LTE(self):
            return self.getToken(EVALParser.LTE, 0)
        def GTE(self):
            return self.getToken(EVALParser.GTE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(EVALParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(EVALParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(EVALParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class IdentExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EVALParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(EVALParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentExpr" ):
                listener.enterIdentExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentExpr" ):
                listener.exitIdentExpr(self)
